tests/neg-custom-args/captures/outer-var.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/outer-var.scala:12:8 -------------------------------------
12 |    x = q           // error
   |        ^
   |        Found:    (q : () => Unit)
   |        Required: () ->{p, q²} Unit
   |
   |        where:    q  is a parameter in method inner
   |                  q² is a parameter in method test
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/outer-var.scala:13:9 -------------------------------------
13 |    x = (q: Proc)   // error
   |         ^^^^^^^
   |         Found:    () => Unit
   |         Required: () ->{p, q} Unit
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/outer-var.scala:14:9 -------------------------------------
14 |    y = (q: Proc)   // error
   |         ^^^^^^^
   |         Found:    () => Unit
   |         Required: () ->{p} Unit
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/outer-var.scala:15:8 -------------------------------------
15 |    y = q           // error, was OK under unsealed
   |        ^
   |        Found:    (q : () => Unit)
   |        Required: () ->{p} Unit
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/outer-var.scala:17:57 ---------------------------------------------------------
17 |  var finalizeActions = collection.mutable.ListBuffer[() => Unit]() // error, was OK under unsealed
   |                                                      ^^^^^^^^^^
   |                             Type variable A of object ListBuffer cannot be instantiated to box () => Unit since
   |                             that type captures the root capability `cap`.
